--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ cffi=1.15.1=py310h255011f_3
 charset-normalizer=2.1.1=pyhd8ed1ab_0
 click=8.1.3=unix_pyhd8ed1ab_2
 comm=0.1.2=py310h06a4308_0
+contourpy=1.0.7=pypi_0
 cryptography=39.0.2=py310h34c0648_0
 cuda=12.1.0=0
 cuda-cccl=12.1.55=0
@@ -65,11 +66,13 @@ cuda-tools=12.1.0=0
 cuda-visual-tools=12.1.0=0
 cudatoolkit=11.8.0=h37601d7_11
 cudnn=8.4.1.50=hed8a83a_0
+cycler=0.11.0=pypi_0
 debugpy=1.5.1=py310h295c915_0
 decorator=5.1.1=pyhd3eb1b0_0
 entrypoints=0.4=py310h06a4308_0
 executing=0.8.3=pyhd3eb1b0_0
 flatbuffers=22.12.06=hcb278e6_2
+fonttools=4.39.2=pypi_0
 frozenlist=1.3.3=py310h5764c6d_0
 gast=0.4.0=pyh9f0ad1d_0
 gds-tools=1.6.0.25=0
@@ -93,6 +96,7 @@ jupyter_core=5.1.1=py310h06a4308_0
 keras=2.11.0=pyhd8ed1ab_0
 keras-preprocessing=1.1.2=pyhd8ed1ab_0
 keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.4=pypi_0
 krb5=1.20.1=h81ceb04_0
 ld_impl_linux-64=2.40=h41732ed_0
 libabseil=20220623.0=cxx17_h05df665_6
@@ -150,6 +154,7 @@ libuuid=2.32.1=h7f98852_1000
 libzlib=1.2.13=h166bdaf_4
 markdown=3.4.3=pyhd8ed1ab_0
 markupsafe=2.1.2=py310h1fa729e_0
+matplotlib=3.7.1=pypi_0
 matplotlib-inline=0.1.6=py310h06a4308_0
 multidict=6.0.4=py310h1fa729e_0
 nccl=2.14.3.1=h0800d71_0
@@ -164,6 +169,7 @@ packaging=23.0=pyhd8ed1ab_0
 parso=0.8.3=pyhd3eb1b0_0
 pexpect=4.8.0=pyhd3eb1b0_3
 pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=9.4.0=pypi_0
 pip=23.0.1=pyhd8ed1ab_0
 platformdirs=3.1.1=pyhd8ed1ab_0
 pooch=1.7.0=pyha770c72_3
@@ -178,6 +184,7 @@ pycparser=2.21=pyhd8ed1ab_0
 pygments=2.11.2=pyhd3eb1b0_0
 pyjwt=2.6.0=pyhd8ed1ab_0
 pyopenssl=23.0.0=pyhd8ed1ab_0
+pyparsing=3.0.9=pypi_0
 pysocks=1.7.1=pyha2e5f31_6
 python=3.10.9=he550d4f_0_cpython
 python-dateutil=2.8.2=pyhd3eb1b0_0
